Fix up timeline on small screens

--- a/_sass/components/_timeline.scss
+++ b/_sass/components/_timeline.scss
@@ -21,7 +21,7 @@
     height: 4px;
     position: absolute;
     top: 0;
-    left: 10px;
+    left: 28px;
     background: $dark-color;
 
     @include mq($bp-small) {
@@ -36,7 +36,7 @@
     height: 4px;
     position: absolute;
     bottom: 0;
-    left: 9px;
+    left: 28px;
     background: $dark-color;
 
     @include mq($bp-small) {
@@ -60,7 +60,7 @@
     content: '';
     position: absolute;
     top: 0;
-    left: 18px;
+    left: 37px;
     height: 100%;
     width: 4px;
     background: $dark-color;
@@ -75,7 +75,7 @@
 .cd-timeline-block {
   @extend %clearfix;
   position: relative;
-  margin: 2em 1em 2em 2em;
+  margin: 2em 1em 2em 3em;
 
   @include mq($bp-small) {
     margin: 20rem 0;
@@ -101,9 +101,9 @@
 .cd-timeline-img {
   position: absolute;
   top: 10px;
-  left: -36px;
-  width: 40px;
-  height: 40px;
+  left: -55px;
+  width: 80px;
+  height: 80px;
   border-radius: 50%;
   background: $dark-color;
 
